apps/robot-shop/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    service: web
  namespace: robot-shop
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    service: web
  type: NodePort
