apps/robot-shop/web/networkpolicy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: web-np
  namespace: robot-shop
spec:
  description: "Allow HTTP From Internet"
  endpointSelector:
    matchLabels:
      service: web
  ingress:
    - toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
          rules:
            http: [ { } ]
